--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,6 +20,10 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 7.0.x
+        
+    - name: Install .NET workloads
+      run: dotnet workload install maui-android
+      
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
