--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,9 +22,8 @@ jobs:
         dotnet-version: 7.0.x
         
     - name: Install .NET workloads
-       run: |
-        dotnet workload install maui-android
-        dotnet workload install ios
+       run: dotnet workload install maui-android
+       run: dotnet workload install ios
       
     - name: Restore dependencies
       run: dotnet restore
