--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,7 +24,9 @@ jobs:
     - name: Install net7.0-android
       run: dotnet workload install maui-android
     - name: Install net7.0-ios
-      run: dotnet workload install ios
+      run: |
+        dotnet workload install ios
+        dotnet workload install maccatalyst
     
     - name: Restore dependencies
       run: dotnet restore
