--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,7 +18,9 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: Install Xcode 14.3
-      run: sudo xcode-select --switch /Applications/Xcode_14.3.app
+      run: |
+        xcode-select -p
+        sudo xcode-select --switch /Applications/Xcode_14.3.app
     
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
