Added the installation for xcode-install tools.

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,6 +20,7 @@ jobs:
     - name: Install Xcode 14.3
       run: |
         xcode-select -p
+        gem install xcode-install
         xcode-install install 14.3
         xcode-select -p
     
